GUI-1545: Add extra bottom padding on instances landing page to avoid cutting off actions menu in table view

--- a/eucaconsole/static/css/pages/instances.css
+++ b/eucaconsole/static/css/pages/instances.css
@@ -146,3 +146,5 @@
 #terminate-instances-btn { margin-left: 1rem; }
 
 .connect-center { text-align: center; }
+
+#maincontent { padding-bottom: 8rem; }
